-
Bug
-
Resolution: Done
-
P2: Important
-
5.10
-
None
-
66a2d159073bfbeec53a0b9e09575c3fe9beac8d (qt/qtbase/5.12)
There is no information in the documentation which QTextCodec::codecForUtfText. It can in fact detect UTF16 and UTF32 in LE and BE and also UTF8.
With the history and wrong documentation in QTextStream::*autoDetectUnicode not explicitly saying that it can detect UTF8, it is a bit confusing and without looking at the source impossible to know.