QTextCodec: update the docs for codecForUtfText

It can detect the standard UTF codecs, but not non-standard like
UTF-7[1], UTF-9 or UTF-18[2].

[1] https://tools.ietf.org/html/rfc2152
[2] https://tools.ietf.org/html/rfc4042

Fixes: QTBUG-67188
Change-Id: If7e743cf8476463880ccfffd155f853dc947421a
Reviewed-by: Olivier Goffart (Woboq GmbH) <ogoffart@woboq.com>